add movment to hero

--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
                     <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb72d63cdb6df55a069d54_%D8%A8%D9%83%D8%B3%D9%84-%D8%A7%D8%A8%D9%8A%D8%B6.png" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb72d63cdb6df55a069d54_%D8%A8%D9%83%D8%B3%D9%84-%D8%A7%D8%A8%D9%8A%D8%B6-p-500.png 500w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb72d63cdb6df55a069d54_%D8%A8%D9%83%D8%B3%D9%84-%D8%A7%D8%A8%D9%8A%D8%B6-p-800.png 800w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb72d63cdb6df55a069d54_%D8%A8%D9%83%D8%B3%D9%84-%D8%A7%D8%A8%D9%8A%D8%B6-p-1080.png 1080w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb72d63cdb6df55a069d54_%D8%A8%D9%83%D8%B3%D9%84-%D8%A7%D8%A8%D9%8A%D8%B6-p-1600.png 1600w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb72d63cdb6df55a069d54_%D8%A8%D9%83%D8%B3%D9%84-%D8%A7%D8%A8%D9%8A%D8%B6-p-2000.png 2000w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb72d63cdb6df55a069d54_%D8%A8%D9%83%D8%B3%D9%84-%D8%A7%D8%A8%D9%8A%D8%B6.png 2480w" alt="" class="white-pixel-img"/>
                     <h1 class="grating-word">حياكــــــــم الله</h1>
                     <h2 class="service-slogen">تفـــرد بتصميــم ابداعـــــي</h2>
-                    <h1 class="service-words">لموقعك الالكتروني</h1>
+                    <div class= "service-words-container">
+                        <h1 class="service-words">لموقعك الالكتروني</h1>
+                        <h1 class="service-words">لعلامتك التجاريـــة</h1>
+                        <h1 class="service-words">لمحتواك الرقمـــــي</h1>
+                    </div>
                     <div class="w-layout-blockcontainer slogen-container w-container">
                         <h3 class="slogen one">نصنـــــــع لكل عميل </h3>
                         <h3 class="slogen">قصــــــــــة نجـــــــــاح</h3>
