add images file

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                     <div class="w-icon-nav-menu"><span></span></div>
                 </div>
                 <a href="#" class="brand w-nav-brand">
-                    <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c24d1ea3d76f7428cbb7f4_Untitled-2.png" loading="lazy" width="Auto" height="Auto" alt="" srcset="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c24d1ea3d76f7428cbb7f4_Untitled-2-p-500.png 500w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c24d1ea3d76f7428cbb7f4_Untitled-2-p-800.png 800w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c24d1ea3d76f7428cbb7f4_Untitled-2-p-1080.png 1080w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c24d1ea3d76f7428cbb7f4_Untitled-2-p-1600.png 1600w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c24d1ea3d76f7428cbb7f4_Untitled-2.png 1744w" sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 940px" class="logo"/>
+                    <img src="images/logo.png" sizes="(max-width: 767px) 98vw, (max-width: 991px) 728px, 940px" class="logo"/>
                 </a>
             </div>
         </div>
         <section class="section hero-section">
             <div class="w-layout-blockcontainer hero-container w-container">
                 <div class="w-layout-blockcontainer hero-text-container w-container">
-                    <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb72d63cdb6df55a069d54_%D8%A8%D9%83%D8%B3%D9%84-%D8%A7%D8%A8%D9%8A%D8%B6.png" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb72d63cdb6df55a069d54_%D8%A8%D9%83%D8%B3%D9%84-%D8%A7%D8%A8%D9%8A%D8%B6-p-500.png 500w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb72d63cdb6df55a069d54_%D8%A8%D9%83%D8%B3%D9%84-%D8%A7%D8%A8%D9%8A%D8%B6-p-800.png 800w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb72d63cdb6df55a069d54_%D8%A8%D9%83%D8%B3%D9%84-%D8%A7%D8%A8%D9%8A%D8%B6-p-1080.png 1080w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb72d63cdb6df55a069d54_%D8%A8%D9%83%D8%B3%D9%84-%D8%A7%D8%A8%D9%8A%D8%B6-p-1600.png 1600w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb72d63cdb6df55a069d54_%D8%A8%D9%83%D8%B3%D9%84-%D8%A7%D8%A8%D9%8A%D8%B6-p-2000.png 2000w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb72d63cdb6df55a069d54_%D8%A8%D9%83%D8%B3%D9%84-%D8%A7%D8%A8%D9%8A%D8%B6.png 2480w" alt="" class="white-pixel-img"/>
+                    <img src="images/pixel-white.png" alt="" class="white-pixel-img"/>
                     <h1 class="grating-word">حياكــــــــم الله</h1>
                     <h2 class="service-slogen">تفـــرد بتصميــم ابداعـــــي</h2>
                     <div class= "service-words-container">
@@ -67,7 +67,7 @@
                         <h3 class="slogen">قصــــــــــة نجـــــــــاح</h3>
                     </div>
                 </div>
-                <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d6470a2d5d4dad66c50b12_8d06f63d14ab8c12b7967eede6728f18_Untitled-3-Recovered%20%281%29.png" loading="lazy" alt="" class="hero-img"/>
+                <img src="images/hero-section.png" loading="lazy" alt="" class="hero-img"/>
             </div>
         </section>
         <section class="section aboutus-section">
@@ -79,13 +79,13 @@
                     </h1>
                     <p class="page-pargraphes">نحن نُمكّن الشركات من بناء هوية قوية وإدارة ظهورها الرقمي بأسلوب احترافي من خلال استراتيجيات رقمية مبتكرة، مما يجعلها علامة متميزة في مجالها، وذلك بفضل فريق من الخبراء والمبدعين المتخصصين..</p>
                 </div>
-                <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb89e8b184dfad0fbdabfc_1(1).png" loading="lazy" id="w-node-_3ef60583-2357-9700-6f8c-93bc090c8df8-36933a22" sizes="(max-width: 921px) 100vw, 921px" alt="" srcset="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb89e8b184dfad0fbdabfc_1(1)-p-500.png 500w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb89e8b184dfad0fbdabfc_1(1)-p-800.png 800w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67cb89e8b184dfad0fbdabfc_1(1).png 921w" class="aboutus-img"/>
+                <img src="images/aboutus.png" class="aboutus-img"/>
             </div>
         </section>
         <section class="section service-secitn">
             <div class="w-layout-grid service-grid hide">
                 <div class="w-layout-grid service-grid-card">
-                    <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66cc3e19e5e51e59d109bba4_Untitled-1-Recovered.png" loading="lazy" sizes="(max-width: 1200px) 100vw, 1200px" srcset="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66cc3e19e5e51e59d109bba4_Untitled-1-Recovered-p-500.png 500w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66cc3e19e5e51e59d109bba4_Untitled-1-Recovered-p-800.png 800w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66cc3e19e5e51e59d109bba4_Untitled-1-Recovered-p-1080.png 1080w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66cc3e19e5e51e59d109bba4_Untitled-1-Recovered.png 1200w" alt="" class="service-img"/>
+                    <img src="images/service-images/papers.png" alt="" class="service-img"/>
                     <div id="w-node-_07608309-4219-7b2a-e06a-b42e99bf5db5-36933a22" class="service-line-shape">
                         <h1 class="service-circal-shap leftside">⬛</h1>
                         <h1 class="service-circal-shap">⬛</h1>
@@ -94,7 +94,7 @@
                     <a href="#" class="service-button w-button">مشـاهــدة  اعـمالنــا</a>
                 </div>
                 <div class="w-layout-grid service-grid-card">
-                    <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66cc3e1a406bb29f57c1e0ab_Untitled-1-Recovered1.png" loading="lazy" sizes="(max-width: 1200px) 100vw, 1200px" srcset="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66cc3e1a406bb29f57c1e0ab_Untitled-1-Recovered1-p-500.png 500w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66cc3e1a406bb29f57c1e0ab_Untitled-1-Recovered1-p-800.png 800w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66cc3e1a406bb29f57c1e0ab_Untitled-1-Recovered1-p-1080.png 1080w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66cc3e1a406bb29f57c1e0ab_Untitled-1-Recovered1.png 1200w" alt="" class="service-img"/>
+                    <img src="images/service-images/advertising.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
                         <h1 class="service-circal-shap leftside">⬛</h1>
                         <h1 class="service-circal-shap">⬛</h1>
@@ -105,7 +105,7 @@
                     <a href="#" class="service-button w-button">مشـاهــدة  اعـمالنــا</a>
                 </div>
                 <div id="w-node-b1bea972-e546-0e73-f696-bed71b0397b0-36933a22" class="w-layout-grid service-grid-card">
-                    <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c9055e25c975990dc4c170_conference.png" loading="lazy" sizes="(max-width: 512px) 100vw, 512px" srcset="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c9055e25c975990dc4c170_conference-p-500.png 500w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c9055e25c975990dc4c170_conference.png 512w" alt="" class="service-img"/>
+                    <img src="images/service-images/conferences.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
                         <h1 class="service-circal-shap leftside">⬛</h1>
                         <h1 class="service-circal-shap">⬛</h1>
@@ -114,7 +114,7 @@
                     <a href="#" class="service-button w-button">مشـاهــدة  اعـمالنــا</a>
                 </div>
                 <div class="w-layout-grid service-grid-card">
-                    <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66cc3e197a2b7428e008e875_Untitled-1-Recovered2.png" loading="lazy" sizes="(max-width: 1200px) 100vw, 1200px" srcset="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66cc3e197a2b7428e008e875_Untitled-1-Recovered2-p-500.png 500w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66cc3e197a2b7428e008e875_Untitled-1-Recovered2-p-800.png 800w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66cc3e197a2b7428e008e875_Untitled-1-Recovered2-p-1080.png 1080w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66cc3e197a2b7428e008e875_Untitled-1-Recovered2.png 1200w" alt="" class="service-img"/>
+                    <img src="images/service-images/printing.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
                         <h1 class="service-circal-shap leftside">⬛</h1>
                         <h1 class="service-circal-shap">⬛</h1>
@@ -123,7 +123,7 @@
                     <a href="#" class="service-button w-button">مشـاهــدة  اعـمالنــا</a>
                 </div>
                 <div class="w-layout-grid service-grid-card hide">
-                    <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c9055e1120c183897570e3_ecommerce.png" loading="lazy" sizes="(max-width: 512px) 100vw, 512px" srcset="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c9055e1120c183897570e3_ecommerce-p-500.png 500w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c9055e1120c183897570e3_ecommerce.png 512w" alt="" class="service-img"/>
+                    <img src="images/service-images/couch-bagging.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
                         <h1 class="service-circal-shap leftside">⬛</h1>
                         <h1 class="service-circal-shap">⬛</h1>
@@ -132,7 +132,7 @@
                     <a href="#" class="service-button w-button">مشـاهــدة  اعـمالنــا</a>
                 </div>
                 <div class="w-layout-grid service-grid-card hide">
-                    <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c90560bfe8de997540c4b3_web-design.png" loading="lazy" sizes="(max-width: 512px) 100vw, 512px" srcset="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c90560bfe8de997540c4b3_web-design-p-500.png 500w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c90560bfe8de997540c4b3_web-design.png 512w" alt="" class="service-img"/>
+                    <img src="images/service-images/sites.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
                         <h1 class="service-circal-shap leftside">⬛</h1>
                         <h1 class="service-circal-shap">⬛</h1>
@@ -143,7 +143,7 @@
                     <a href="#" class="service-button w-button">مشـاهــدة  اعـمالنــا</a>
                 </div>
                 <div class="w-layout-grid service-grid-card last-element-right hide">
-                    <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c9055f0e0e87c14c2c25dd_video-editing%20(1).png" loading="lazy" sizes="(max-width: 512px) 100vw, 512px" srcset="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c9055f0e0e87c14c2c25dd_video-editing%20(1)-p-500.png 500w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c9055f0e0e87c14c2c25dd_video-editing%20(1).png 512w" alt="" class="service-img"/>
+                    <img src="images/service-images/motion.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
                         <h1 class="service-circal-shap leftside">⬛</h1>
                         <h1 class="service-circal-shap">⬛</h1>
@@ -154,7 +154,7 @@
                     <a href="#" class="service-button w-button">مشـاهــدة  اعـمالنــا</a>
                 </div>
                 <div class="w-layout-grid service-grid-card last-element hide">
-                    <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c9055fc9fa571543a44ecb_social-media-marketing.png" loading="lazy" sizes="(max-width: 512px) 100vw, 512px" srcset="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c9055fc9fa571543a44ecb_social-media-marketing-p-500.png 500w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/66c9055fc9fa571543a44ecb_social-media-marketing.png 512w" alt="" class="service-img"/>
+                    <img src="images/service-images/markiting.png" alt="" class="service-img"/>
                     <div class="service-line-shape">
                         <h1 class="service-circal-shap leftside">⬛</h1>
                         <h1 class="service-circal-shap">⬛</h1>
@@ -176,19 +176,19 @@
                     <div class="partners-scroll-wrapper">
                         <div class="images-container">
                             <div class="service-company-contairner">
-                                <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d36137c559bdd502ca59c2_5.png" loading="lazy" alt="" class="srvice-company-image"/>
+                                <img src="images/companies-images/izar-colorful.png" loading="lazy" alt="" class="srvice-company-image"/>
                             </div>
                             <div class="service-company-contairner">
-                                <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d36137c559bdd502ca59c2_5.png" loading="lazy" alt="" class="srvice-company-image"/>
+                                <img src="images/companies-images/izar-colorful.png" loading="lazy" alt="" class="srvice-company-image"/>
                             </div>
                             <div class="service-company-contairner">
-                                <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d36137c559bdd502ca59c2_5.png" loading="lazy" alt="" class="srvice-company-image"/>
+                                <img src="images/companies-images/izar-colorful.png" loading="lazy" alt="" class="srvice-company-image"/>
                             </div>
                             <div class="service-company-contairner">
-                                <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d36137c559bdd502ca59c2_5.png" loading="lazy" alt="" class="srvice-company-image"/>
+                                <img src="images/companies-images/izar-colorful.png" loading="lazy" alt="" class="srvice-company-image"/>
                             </div>
                             <div class="service-company-contairner">
-                                <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d36137c559bdd502ca59c2_5.png" loading="lazy" alt="" class="srvice-company-image"/>
+                                <img src="images/companies-images/izar-colorful.png" loading="lazy" alt="" class="srvice-company-image"/>
                             </div>
                         </div>
                     </div>
@@ -250,7 +250,7 @@
                         </p>
                         <div class="w-layout-blockcontainer contact-withus-container w-container">
                             <div class="w-layout-blockcontainer contact-withus-block w-container">
-                                <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d25bb7b43613a019a06741_%D8%A8%D9%83%D8%B3%D9%84%20(1).png" loading="lazy" width="Auto" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" alt="" srcset="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d25bb7b43613a019a06741_%D8%A8%D9%83%D8%B3%D9%84%20(1)-p-500.png 500w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d25bb7b43613a019a06741_%D8%A8%D9%83%D8%B3%D9%84%20(1)-p-800.png 800w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d25bb7b43613a019a06741_%D8%A8%D9%83%D8%B3%D9%84%20(1)-p-1080.png 1080w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d25bb7b43613a019a06741_%D8%A8%D9%83%D8%B3%D9%84%20(1).png 1275w" class="whatsup-img"/>
+                                <img src="images/social-media/heaadphones.png" class="whatsup-img"/>
                                 <div>
                                     <h4 class="contct-block-head">خدمـــة العمــلاء</h4>
                                     <h3 class="contact-number">967774769410+</h3>
@@ -258,16 +258,16 @@
                             </div>
                             <div class="w-layout-blockcontainer socialmedia-logos w-container">
                                 <a href="#" class="w-inline-block">
-                                    <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d36136d6479017059ba64b_7e6c39a32f737495f7640a70c811d873_1.png" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 783px" srcset="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d36136d6479017059ba64b_7e6c39a32f737495f7640a70c811d873_1-p-500.png 500w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d36136d6479017059ba64b_7e6c39a32f737495f7640a70c811d873_1.png 783w" alt="" class="socialmedia-img"/>
+                                    <img src="images/social-media/whatsapp.png" class="socialmedia-img"/>
                                 </a>
                                 <a href="#" class="w-inline-block">
-                                    <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d3613815744f1d9287b7b3_e0ef6d6e657f4e91f524d8f82315669c_2.png" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 851px" srcset="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d3613815744f1d9287b7b3_e0ef6d6e657f4e91f524d8f82315669c_2-p-500.png 500w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d3613815744f1d9287b7b3_e0ef6d6e657f4e91f524d8f82315669c_2.png 851w" alt="" class="socialmedia-img"/>
+                                    <img src="images/social-media/instgram.png" alt="" class="socialmedia-img"/>
                                 </a>
                                 <a href="#" class="w-inline-block">
-                                    <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d36135626cdfab369be47b_100d95551e8af1bb0959148d35762984_3.png" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 859px" srcset="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d36135626cdfab369be47b_100d95551e8af1bb0959148d35762984_3-p-500.png 500w, https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d36135626cdfab369be47b_100d95551e8af1bb0959148d35762984_3.png 859w" alt="" class="socialmedia-img"/>
+                                    <img src="images/social-media/facebook.png" alt="" class="socialmedia-img"/>
                                 </a>
                                 <a href="#" class="socialmedia-img x-container w-inline-block">
-                                    <img src="https://cdn.prod.website-files.com/65e5ed2103a1b7d936933a1b/67d3613660801427b602ebc9_1b0575e33641c50ed5009724ee1ecc2e_4.png" loading="lazy" alt="" class="socialmedia-img x-logo"/>
+                                    <img src="images/social-media/x.png" loading="lazy" alt="" class="socialmedia-img x-logo"/>
                                 </a>
                             </div>
                         </div>
