add interaction to the index

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
         </section>
         <section class="section aboutus-section">
-            <div class="w-layout-grid aboutus-grid">
+            <div class="w-layout-grid aboutus-grid animate-from-right">
                 <div class="w-layout-blockcontainer aboutus-container w-container">
                     <h1 class="page-headers">بكســـل</h1>
                     <h1 class="second-slogen">
@@ -79,7 +79,7 @@
                     </h1>
                     <p class="page-pargraphes">نحن نُمكّن الشركات من بناء هوية قوية وإدارة ظهورها الرقمي بأسلوب احترافي من خلال استراتيجيات رقمية مبتكرة، مما يجعلها علامة متميزة في مجالها، وذلك بفضل فريق من الخبراء والمبدعين المتخصصين..</p>
                 </div>
-                <img src="images/aboutus.png" class="aboutus-img"/>
+                <img src="images/aboutus.png" class="aboutus-img animate-from-left"/>
             </div>
         </section>
         <section class="section service-secitn">
@@ -198,23 +198,23 @@
         <section class="section numbers-section">
             <div class="w-layout-grid numbers-grid">
                 <div class="w-layout-blockcontainer numbers-container w-container">
-                    <h1 class="numbers">34+</h1>
+                    <h1 class="numbers">+34</h1>
                     <h5 class="number-description">محتوى تسويـقــــي</h5>
                 </div>
                 <div class="w-layout-blockcontainer numbers-container w-container">
-                    <h1 class="numbers">1500+</h1>
+                    <h1 class="numbers">+1500</h1>
                     <h5 class="number-description">تصميــــم ابداعـــــــي</h5>
                 </div>
                 <div class="w-layout-blockcontainer numbers-container w-container">
-                    <h1 class="numbers">8+</h1>
+                    <h1 class="numbers">+8</h1>
                     <h5 class="number-description">حسابات تواصـــــل</h5>
                 </div>
                 <div class="w-layout-blockcontainer numbers-container w-container">
-                    <h1 class="numbers">60+</h1>
+                    <h1 class="numbers">+60</h1>
                     <h5 class="number-description">عميــــــــل</h5>
                 </div>
                 <div class="w-layout-blockcontainer numbers-container w-container">
-                    <h1 class="numbers">15+</h1>
+                    <h1 class="numbers">+15</h1>
                     <h5 class="number-description">بنـــاء العلامــة التجاريــــة</h5>
                 </div>
             </div>
@@ -233,10 +233,10 @@
                             <input type="submit" data-wait="Please wait..." class="submit-button w-button" value="ارســــــــال"/>
                         </form>
                         <div class="w-form-done">
-                            <div>Thank you! Your submission has been received!</div>
+                            <div>شكرا لك, لقد تم ارسال رسالتك</div>
                         </div>
                         <div class="w-form-fail">
-                            <div>Oops! Something went wrong while submitting the form.</div>
+                            <div>حدث خطاء ماء</div>
                         </div>
                     </div>
                     <!-- Contact info div moved to second position -->
