social media logo size, add links

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <div class="navbar-container w-container">
                 <nav role="navigation" class="nav-menu w-nav-menu">
                     <a href="#" class="nav-link w-nav-link">الرئيسية</a>
-                    <a href="#" class="nav-link w-nav-link">خدماتنا</a>
-                    <a href="#" class="nav-link w-nav-link">من نحن</a>
-                    <a href="#" class="nav-link nav-button-contact w-nav-link">تواصل معنا</a>
+                    <a href="#our-service" class="nav-link w-nav-link">خدماتنا</a>
+                    <a href="#about-us" class="nav-link w-nav-link">من نحن</a>
+                    <a href="https://wa.me/967774769410" class="nav-link nav-button-contact w-nav-link">تواصل معنا</a>
                 </nav>
                 <div class="menu-button w-nav-button" onclick="toggleMobileMenu()">
                     <div class="w-icon-nav-menu"><span></span></div>
@@ -70,7 +70,7 @@
                 <img src="images/hero-section.png" loading="lazy" alt="" class="hero-img"/>
             </div>
         </section>
-        <section class="section aboutus-section">
+        <section class="section aboutus-section" id="about-us">
             <div class="w-layout-grid aboutus-grid animate-from-right">
                 <div class="w-layout-blockcontainer aboutus-container w-container">
                     <h1 class="page-headers">بكســـل</h1>
@@ -82,7 +82,7 @@
                 <img src="images/aboutus.png" class="aboutus-img animate-from-left"/>
             </div>
         </section>
-        <section class="section service-secitn">
+        <section class="section service-secitn" id="our-service">
             <div class="w-layout-grid service-grid hide">
                 <div class="w-layout-grid service-grid-card">
                     <img src="images/service-images/papers.png" alt="" class="service-img"/>
@@ -249,24 +249,24 @@
                             اطلــب اجتماع أونلاين أو حضوري <br/>وحدد الوقت الـمناســب لك...
                         </p>
                         <div class="w-layout-blockcontainer contact-withus-container w-container">
-                            <div class="w-layout-blockcontainer contact-withus-block w-container">
+                            <a href="tel:+966501234567" class="w-layout-blockcontainer contact-withus-block w-container">
                                 <img src="images/social-media/heaadphones.png" class="whatsup-img"/>
                                 <div>
                                     <h4 class="contct-block-head">خدمـــة العمــلاء</h4>
                                     <h3 class="contact-number">967774769410+</h3>
                                 </div>
-                            </div>
+                            </a>
                             <div class="w-layout-blockcontainer socialmedia-logos w-container">
-                                <a href="#" class="w-inline-block">
+                                <a href="https://wa.me/967774769410" class="w-inline-block">
                                     <img src="images/social-media/whatsapp.png" class="socialmedia-img"/>
                                 </a>
-                                <a href="#" class="w-inline-block">
+                                <a href="https://www.instagram.com/pixelagency23/" class="w-inline-block">
                                     <img src="images/social-media/instgram.png" alt="" class="socialmedia-img"/>
                                 </a>
                                 <a href="#" class="w-inline-block">
                                     <img src="images/social-media/facebook.png" alt="" class="socialmedia-img"/>
                                 </a>
-                                <a href="#" class="socialmedia-img x-container w-inline-block">
+                                <a href="https://x.com/pixelagency23?t=peANAf6Tm53NtmaaETljlA&s=09" class="socialmedia-img x-container w-inline-block">
                                     <img src="images/social-media/x.png" loading="lazy" alt="" class="socialmedia-img x-logo"/>
                                 </a>
                             </div>
@@ -278,13 +278,13 @@
         <section class="section footer">
             <div class="w-layout-grid footer-grid">
                 <div id="w-node-_6ed26eb6-f989-0238-d970-fd379ec17c8c-36933a22" class="w-layout-blockcontainer footer-container w-container">
-                    <a href="#" class="footer-text">من نحــن</a>
+                    <a href="#about-us" class="footer-text">من نحــن</a>
                     <a href="#" class="footer-text">اعمالنـــا</a>
-                    <a href="#" class="footer-text">خدماتنـــا</a>
+                    <a href="#our-service" class="footer-text">خدماتنـــا</a>
                 </div>
                 <div id="w-node-_7f0e8af5-8e5c-feaf-3a72-24e6f17f5c06-36933a22" class="w-layout-blockcontainer footer-container left-side w-container">
                     <a href="#" class="footer-text">سياســة الخصوصيـة</a>
-                    <a href="#" class="footer-text">تواصــل معنــا</a>
+                    <a href="https://wa.me/967774769410" class="footer-text">تواصــل معنــا</a>
                 </div>
             </div>
         </section>
